Fix mobile horizontal overflow on poses page

--- a/content/themes/hypercat-theme/assets/css/common/poses.css
+++ b/content/themes/hypercat-theme/assets/css/common/poses.css
@@ -11,6 +11,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 0;
+    box-sizing: border-box;
 }
 .poses-page .post-single {
     width: 100% !important;
@@ -18,6 +19,7 @@
     margin-left: auto !important;
     margin-right: auto !important;
     padding: 0 !important;
+    box-sizing: border-box;
 }
 .poses-page .poses-container {
     width: 100%;
@@ -25,6 +27,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 0;
+    box-sizing: border-box;
 }
 .poses-container {
         margin: 24px auto;
@@ -32,14 +35,16 @@
         max-width: 2200px;
         padding-left: 0;
         padding-right: 0;
+        box-sizing: border-box;
 }
 
 @media (max-width: 900px) {
     .poses-container {
-        width: 100vw;
-        max-width: 100vw;
+        width: 100%;
+        max-width: 100%;
         padding-left: 0;
         padding-right: 0;
+        box-sizing: border-box;
     }
 }
 
